# sfda_rsd

./: README.md  SFDA_RSD_Verification_Guide.md.tmp.38032.1772708217652  pyproject.toml  requirements.txt
sfda_rsd/: hooks.py  modules.txt  patches.txt  setup.py  tasks.py
sfda_rsd/config/: sfda_rsd.py
sfda_rsd/connectors/: error_codes.py  rsd_connector.py  soap_builder.py
sfda_rsd/connectors/services/: accept_service.py  consume_service.py  deactivate_service.py  dispatch_service.py  export_service.py  import_service.py  pharmacy_sale_service.py  pts_service.py  query_service.py  return_service.py  supply_service.py  transfer_service.py
sfda_rsd/patches/v1_0/: migrate_rsd_settings_to_per_branch.py
sfda_rsd/public/js/: rsd_button.js
sfda_rsd/sfda_rsd/api/: item_hooks.py  rsd_api.py
sfda_rsd/sfda_rsd/doctype/rsd_drug_unit/: rsd_drug_unit.json  rsd_drug_unit.py
sfda_rsd/sfda_rsd/doctype/rsd_notification_queue/: rsd_notification_queue.json  rsd_notification_queue.py
sfda_rsd/sfda_rsd/doctype/rsd_settings/: rsd_settings.js  rsd_settings.json  rsd_settings.py
sfda_rsd/sfda_rsd/doctype/rsd_transaction_log/: rsd_transaction_log.json  rsd_transaction_log.py
sfda_rsd/utils/: gs1_parser.py  xml_helpers.py
